Switched Base64 to java.util.Base64